--- a/templates/setting.html
+++ b/templates/setting.html
@@ -32,7 +32,7 @@
           <div class="gloss"></div>
           <div class="eaves-container">
             <a href="group">我的小班</a>
-            <a href="history">历史查询</a>
+            <a href="data">数据查询</a>
             <a class="active">系统设置</a>
           </div>
         </div>
@@ -56,7 +56,6 @@
         </footer>
       </div>
     </main>
-    <div id="notify_container"></div>
   </body>
   <script src="lib/script.js"></script>
   <script>
