新增了策略按钮和页面，然鹅并没写完
bcz.py的删除和filter.py的新增是因为VSCode之前没保存...

--- a/templates/filter_test.html
+++ b/templates/filter_test.html
@@ -198,21 +198,27 @@
             height: 500px;
             opacity: 1;
         }
-    </style>
-    <style>
+
         .button:hover {
             background-color: #00000030;
         }
+        
+        .active{
+            /*被激活的按钮样式*/
+
+            background-color: #00000050;
+            color: white;
+        }
 
         .separator {
+            /*分割横线*/
             border-bottom: 1px solid rgb(0, 0, 0);
             width: 95%;
             margin: auto;
         }
 
         .box-separator {
-
-
+            /*分割竖线*/
             height: 100%;
             width: 1px;
             background-color: black;
